Retira argumentos redundantes e variavel não utilizada